cmake_minimum_required(VERSION 3.15)
project(StereoCalibMatch)
find_package(OpenCV)
include_directories( ${OpenCV_INCLUDE_DIRS} )
set(CMAKE_CXX_STANDARD 14)
set(SOURCE_FILES main.cpp)
add_executable(StereoCalibMatch stereo_calib.cpp stereo_calib.h)
target_link_libraries(StereoCalibMatch ${OpenCV_LIBS} )